# trove

./: .gitignore  CMakeLists.txt  README.md  build.sh  go.mod  main.go
constants/: dirnames.go
include/: args.h  constants.h  log.h  presets.h  sort.h  spawn_dir.h
lib/: args.go  collate.go  move.go  sort.go  spawndir.go
shell/: pop_dir.sh
src/: args.cpp  constants.cpp  log.cpp  main.cpp  sort.cpp  spawn_dir.cpp
